--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body class="is-preload">
 	<!-- Wrapper -->
 	<div id="wrapper"style = "
-	     position:relative; 
+	     position:relative;
 	     z-index:2">
 
 	    <!-- Header -->
@@ -25,13 +25,9 @@
 		<div class="content">
 		    <div class="inner">
 			<div id="container" class="container" style = "
-				 position:relative; 
+				 position:relative;
 				 z-index:1">
-			    <div id="scene" class="scene" style="    margin-left: 6.5em;
-				     margin-right: auto;
-				     align-items: center;
-
-				     justify-content: center;">
+			    <div id="scene" class="scene">
 				<div data-depth="0.80"><img src="images/layer2.png" style="width:300px;height:300px;"></div>
 				<div data-depth="0.60"><img src="images/layer3.png" style="width:300px;height:300px;"></div>
 				<div data-depth="0.40"><img src="images/layer4.png" style="width:300px;height:300px;"></div>
@@ -103,7 +99,7 @@
 
 	    <!-- Footer -->
 	    <footer id="footer">
-		Copyleft <span class="copy-left">&copy;</span> 
+		Copyleft <span class="copy-left">&copy;</span>
 		2018 <Asthra19>
 	    </footer>
 
